# rxpect

./: .gitignore  CLAUDE.md  Cargo.toml  Justfile  LICENSE-MIT  README.md
.claude/skills/add-expectation/: SKILL.md
.forgejo/ISSUE_TEMPLATE/: bug.md
.forgejo/workflows/: pr-checks.yml
.github/ISSUE_TEMPLATE/: expectation.md  feature.md
rxpect/: CHANGELOG.md  Cargo.toml  README.md
rxpect/src/: diff.rs  expectation_list.rs  groups.rs  lib.rs  projection.rs  root.rs
rxpect/src/expectations/: boolean.rs  equality.rs  option.rs  order.rs  result.rs  string.rs
rxpect/src/expectations/iterables/: count.rs  equality.rs  mod.rs
src/: aspect.rs  borrow.rs  expectation_list.rs  lib.rs  projection.rs  root.rs
src/expect/: equality.rs  mod.rs
src/expectations/: boolean.rs  equality.rs  mod.rs  option.rs  order.rs  predicate.rs  result.rs  string.rs
src/expectations/iterables/: count.rs  equality.rs  mod.rs
visualize/: Cargo.toml
visualize/src/: cli.rs  data.rs  main.rs  visualization.rs
visualize/src/visualizations/: boolean.rs  equality.rs  iterables.rs  mod.rs  option.rs  order.rs  result.rs  string.rs
