[package]
name = "rxpect"
version = "0.2.0"
edition = "2021"
authors = ["Daniel Raniz Raneland <raniz@raneland.se>"]
categories = [
  "assertions",
  "expectations",
  "fluent",
  "matchers",
  "testing",
]
description = "Extensible fluent expectations for Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/raniz85/rxpect"
documentation = "https://docs.rs/rxpect"
