[package]
name = "rxpect"
version = "0.4.0"
edition = "2021"
authors = ["Daniel Raniz Raneland <raniz@raneland.se>"]
categories = [
  "development-tools",
  "development-tools::testing"
]
description = "Extensible fluent expectations for Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/raniz85/rxpect"
documentation = "https://docs.rs/rxpect"

[dependencies]
rstest = "0.24.0"
itertools = {  version = "0.14.0", optional = true }

[features]
default = ["iterables"]
iterables = [ "itertools" ]
