[package]
name = "rxpect"
version = "0.10.0"
edition = "2024"
authors = ["Daniel Raniz Raneland <raniz@raneland.se>"]
categories = [
  "development-tools",
  "development-tools::testing"
]
description = "Extensible fluent expectations for Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/raniz85/rxpect"
documentation = "https://docs.rs/rxpect"

[dependencies]
colored = "3.1.1"
itertools = { version = "0.14.0", optional = true }
similar = { version = "2.7.0", features = ["inline"] }

[dev-dependencies]
rstest = "0.26.1"

[features]
default = ["iterables", "diff"]
iterables = [ "dep:itertools" ]
diff = []
