[package]
name = "rxpect"
version = "0.11.0"
edition = "2024"
authors = ["Daniel Raniz Raneland <raniz@raneland.se>"]
categories = [
  "development-tools",
  "development-tools::testing"
]
keywords = ["test", "assert", "assertion", "fluent", "matchers"]
description = "Extensible fluent expectations for Rust"
license = "MIT OR Apache-2.0"
repository = "https://codeberg.org/raniz/rxpect"
documentation = "https://docs.rs/rxpect"

[package.metadata."docs.rs"]
all-features = true

[dependencies]
colored = { version = "3.1.1", optional = true }
itertools = { version = "0.14.0", optional = true }
similar = { version = "2.7.0", features = ["inline"], optional = true }

[dev-dependencies]
dedent = { version = "0.1.1" }
rstest = "0.26.1"

[features]
default = ["iterables", "diff"]
iterables = [ "dep:itertools" ]
diff = [ "dep:colored", "dep:similar" ]
